--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 }
 
 .career-img{
-  max-width: 250px;
-  max-height: 250px;
+  max-width: 200px;
+  max-height: 200px;
 }
 
 .avatar{
@@ -12,14 +12,51 @@
   max-height: 200px;
 }
 
+.link-container{
+  height: 48px;
+  align-content: center;
+}
 
-@media screen and (max-width: 1322px) {
+.link-container:hover{
+  background-color: rgba(216, 171, 73, 0.74);
+}
+
+.menu-link{
+  color: black;
+  text-decoration: none;
+}
+
+@media (min-width: 768px){
+  .sidemenu{
+    flex: 0 0 25%;
+  }
+
+  .sidecontent{
+    flex: 0 0 75%;
+  }
+  
+}
+
+@media(max-width: 767.98px){
+  .sidemenu{
+    flex: 0 0 100%;
+  }
+  .sidecontent{
+    flex: 0 0 100%;
+  }
+  .menu-link{
+    font-size: small;
+  }
+}
+
+
+@media (max-width: 1322px) {
   .career-img{
     max-width: 200px;
     max-height: 200px;
   }
 
-@media screen and (max-width: 998px) {
+@media (max-width: 998px) {
   .career-img{
     max-width: 125px;
     max-height: 125px;
@@ -32,9 +69,14 @@
   .career-content p{
     font-size: small;
   }
+
+  .link-container{
+    text-align: center;
+    
+  }
 }
 
-@media screen and (max-width: 767.98px) {
+@media (max-width: 767.98px) {
   .career-content{
     padding-top: 16px;
     text-align: right;
