--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,10 @@ ul{
   align-content: center;
 }
 
+.content-center{
+  align-content: center;
+}
+
 .link-container:hover{
   background-color: rgba(216, 171, 73, 0.74);
 }
