--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,10 @@ ul{
   align-content: center;
 }
 
+.no-decoration{
+  text-decoration: none;
+}
+
 .link-container:hover{
   background-color: rgba(216, 171, 73, 0.74);
 }
